translation-tool/inputs/source_meta/objects/Common_Red_Text_Processor_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Contains the reference to the processor class</description>
        <inlineHelpText>Contains the reference to the processor class</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <description>Filter logic to be used in the processor class for dynamic query.</description>
        <inlineHelpText>Filter logic to be used in the processor class for dynamic query.</inlineHelpText>
        <label>Filter Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <description>Contains the name of the processor class to filter red texts</description>
        <inlineHelpText>Contains the name of the processor class to filter red texts</inlineHelpText>
        <label>Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Common Red Text Processor Mapping</label>
    <pluralLabel>Common Red Text Processor Mappings</pluralLabel>
</CustomObject>